--- a/PantallasDinamicas/PantallasDinamicas/PantallasDinamicas.vbproj
+++ b/PantallasDinamicas/PantallasDinamicas/PantallasDinamicas.vbproj
@@ -66,13 +66,13 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BotonesDinamicos.vb" />
-    <Compile Include="PintorControles.vb" />
-    <Compile Include="Form1.vb">
+    <Compile Include="DinamicHandler.vb" />
+    <Compile Include="DinamicControls.vb" />
+    <Compile Include="PruebaDinamicos.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="PruebaDinamicos.Designer.vb">
+      <DependentUpon>PruebaDinamicos.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -92,8 +92,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="PruebaDinamicos.resx">
+      <DependentUpon>PruebaDinamicos.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
